<resources>
    <string name="app_name">LayoutDesignPersonalInfo</string>
    <string name="contact_person_name">Contact Person Name/যোগাযোগের বাক্তির নাম:</string>
    <string name="designation">Designation/পদবি:</string>
    <string name="email">Email/ইমেইল:</string>
    <string name="contact_number">Contact Number/যোগাযোগের নম্বর:</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="personal_information_header">Personal Information</string>
</resources>