<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/paperfly_logo" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/headline_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/personal_information_header"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/logo_trans"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contactPersonNameTIL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/contact_person_name"
                    app:boxStrokeColor="@color/ETlabel"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/ETlabel"
                    app:helperTextEnabled="true"
                    app:hintTextColor="@color/ETbox">
                    <!--app:helperText="@string/helper_email"-->

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/contactPersonNameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/designationTIL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/designation"
                    app:boxStrokeColor="@color/ETlabel"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/ETlabel"
                    app:helperTextEnabled="true"
                    app:hintTextColor="@color/ETbox">
                    <!--app:helperText="@string/helper_email"-->

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/designationET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contactNumberTIL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/contact_number"
                    app:boxStrokeColor="@color/ETlabel"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/ETlabel"
                    app:helperTextEnabled="true"
                    app:hintTextColor="@color/ETbox">
                    <!--app:helperText="@string/helper_email"-->

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/contactNumberET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTIL"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/email"
                    app:boxStrokeColor="@color/ETlabel"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/ETlabel"
                    app:helperTextEnabled="true"
                    app:hintTextColor="@color/ETbox">
                    <!--app:helperText="@string/helper_email"-->

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/submit_changes"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>